Fix tables to obey '%autowidth.stretch' directive

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,13 @@
   font-weight: var(--table-header-weight);
 }
 
+/* Make tables obey '.stretch' directive */
+
+.asciidoc-blocks-table-parent table.tableblock.stretch
+{
+  width: 100%;
+}
+
 /*------------------------------------------------------------------------------------------------*/
 /*  Borders                                                                                       */
 /*------------------------------------------------------------------------------------------------*/
